--- a/package.json
+++ b/package.json
@@ -23,8 +23,14 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@nestjs/common": "^10.4.6",
+		"@nestjs/core": "^10.4.6",
+		"@nestjs/schedule": "^4.1.1",
 		"@types/luxon": "~3.4.0",
-		"luxon": "~3.4.0"
+		"luxon": "~3.4.0",
+		"reflect-metadata": "^0.2.2",
+		"rxjs": "^7.8.1",
+		"ts-node": "^10.9.2"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "18.6.1",
